; ModuleID = '/home/carl/AnghaBench/glfw/tests/extr_glfwinfo.c_get_strategy_name_glfw.c'
source_filename = "/home/carl/AnghaBench/glfw/tests/extr_glfwinfo.c_get_strategy_name_glfw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GLFW_LOSE_CONTEXT_ON_RESET = common dso_local global i32 0, align 4
@STRATEGY_NAME_LOSE = common dso_local global i8* null, align 8
@GLFW_NO_RESET_NOTIFICATION = common dso_local global i32 0, align 4
@STRATEGY_NAME_NONE = common dso_local global i8* null, align 8
@.str = private unnamed_addr constant [8 x i8] c"unknown\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32)* @get_strategy_name_glfw to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @get_strategy_name_glfw(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = load i32, i32* @GLFW_LOSE_CONTEXT_ON_RESET, align 4
  %6 = icmp eq i32 %4, %5
  br i1 %6, label %7, label %9

7:                                                ; preds = %1
  %8 = load i8*, i8** @STRATEGY_NAME_LOSE, align 8
  store i8* %8, i8** %2, align 8
  br label %16

9:                                                ; preds = %1
  %10 = load i32, i32* %3, align 4
  %11 = load i32, i32* @GLFW_NO_RESET_NOTIFICATION, align 4
  %12 = icmp eq i32 %10, %11
  br i1 %12, label %13, label %15

13:                                               ; preds = %9
  %14 = load i8*, i8** @STRATEGY_NAME_NONE, align 8
  store i8* %14, i8** %2, align 8
  br label %16

15:                                               ; preds = %9
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %16

16:                                               ; preds = %15, %13, %7
  %17 = load i8*, i8** %2, align 8
  ret i8* %17
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
